# aej-dbt

./: .env.example  .envrc.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  README.md  app.py  dbt_project.yml  package-lock.yml  packages.yml  parquet_exports.json  profiles.yml  publisher.py  pyproject.toml
.devcontainer/: devcontainer.json  post-create.sh  update-content.sh
.github/workflows/: ci-cd.yml  dbt-ci-cleanup.yml  dbt.yml  deploy.yml  lint.yml  tests.yml
macros/: configure_ci_dataset.sql  email_event_privacy_or_bot_reason.sql  get_frontmatter_value.sql  get_job_slug.sql  get_organization_slug.sql  normalize_email_address.sql  normalize_event_type.sql  test_is_normalized_email_address.sql
models/: exposures.yml  groups.yml
models/marts/: dim_email_messages.sql  dim_email_subscribers.sql  dim_jobs.sql  dim_organizations.sql  fct_email_events.sql  fct_email_subscriber_messages.sql  fct_email_subscribers_daily.sql  fct_form_submissions.sql  marts.yml
models/staging/analytics_engineering_jobs/: analytics_engineering_jobs.yml  stg_jobs.sql  stg_organizations.sql
models/staging/netlify/: netlify.yml  stg_netlify__form_submissions.sql
models/staging/resend/: resend.yml  stg_resend__contact_events.sql  stg_resend__contacts.sql  stg_resend__email_events.sql  (+1 more)
scripts/: configure-dbt-wizard  dbt-deps  dbt-parse  install-dbt-fusion  install-dbt-wizard  restore-dbt-wizard-auth
tests/: assert_fct_email_subscribers_daily_current_state.sql  test_app.py  test_configure_dbt_wizard.py  test_mdbt.py  test_mpub.py  test_mpublish.py  test_publisher.py
(+4 files in other folders)
