[project]
name = "aej-dbt"
version = "0.1.0"
description = "dbt project for Analytics Engineering Jobs"
requires-python = ">=3.12,<3.14"
dependencies = []

[dependency-groups]
dev = [
    "modal>=1,<2",
    "pre-commit>=4,<5",
    "ruff>=0.12,<1",
    "shandy-sqlfmt[jinjafmt]>=0.28,<1",
]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
